--- a/static/css/post.less
+++ b/static/css/post.less
@@ -16,65 +16,102 @@
                     <i class="cf-icon cf-icon-help"></i>
                     Announcements &amp; updates
                 </a>
-                <h1 class="post_header">A consumer-centered supervision program</h1>
+                <h1 class="post_header">
+                    A consumer-centered supervision program
+                </h1>
                 <p>
-                    <span class="post_byline">By <a href="#">Firstname&nbsp;Lastname</a> &ndash;</span>
-                    <span class="post_date date">Mon 32, 3001</span>
+                    <span class="post_byline">
+                        By <a href="#">Firstname&nbsp;Lastname</a> &ndash;
+                    </span>
+                    <span class="post_date date">
+                        Mon 32, 3001
+                    </span>
                 </p>
                 <ul class="post_share share-icons">
-                    <li><a href="#"><i class="cf-icon cf-icon-email-social-square"></i> Email</a></li>
-                    <li><a href="#"><i class="cf-icon cf-icon-facebook-square"></i> Facebook</a></li>
-                    <li><a href="#"><i class="cf-icon cf-icon-twitter-square"></i> Twitter</a></li>
-                    <li><a href="#"><i class="cf-icon cf-icon-linkedin-square"></i> LinkedIn</a></li>
+                    <li>
+                        <a href="#">
+                            <i class="cf-icon cf-icon-email-social-square"></i>
+                            Email
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="cf-icon cf-icon-facebook-square"></i>
+                            Facebook
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="cf-icon cf-icon-twitter-square"></i>
+                            Twitter
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="cf-icon cf-icon-linkedin-square"></i>
+                            LinkedIn
+                        </a>
+                    </li>
                 </ul>
                 <img class="post_featured-img" src="http://placekitten.com/706/408" alt="alt text">
-                <div class="post-summary line-container">
-                    <div class="header-slug">
-                        <h2 class="post-summary_header line-container_pullup header-slug_inner">
+                <div class="line-container">
+                    <div class="header-slug line-container_pullup">
+                        <h2 class="header-slug_inner">
                             Blog summary
                         </h2>
                     </div>
-                    <div class="line-container_body">
-                        <p class="post-summary_text">
-                            Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                            id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                            Labitur liberavisse quo ei, utamur impetus eu nam.
+                    <div class="post_summary line-container_body">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing
+                            elit. Quis architecto commodi cupiditate excepturi
+                            consequatur sequi quia consectetur est ea laborum
+                            saepe earum quidem a necessitatibus modi magni error
+                            ab suscipit.
                         </p>
                     </div>
                 </div>
             </header>
             <div class="post_body">
                 <p>
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <section class="callout">
-                    <div class="demo-placeholder">More information placeholder</div>
+                    <div class="demo-placeholder">
+                        More information placeholder
+                    </div>
                 </section>
                 <p>
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
                 </p>
                 <p>
-                    Lorem ipsum dolor sit amet, ea has partem perpetua. Eu graeci adipisci evertitur mei,
-                    id maiestatis elaboraret dissentias his. Eos id alia graeco timeam, id malis augue quo.
-                    Labitur liberavisse quo ei, utamur impetus eu nam.
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum corrupti tempora nam nihil qui mollitia consectetur
+                    corporis nemo culpa dolorum! Laborum at eos deleniti
+                    consequatur itaque officiis debitis quisquam! Provident!
                 </p>
             </div>
             <footer>
-                <div class="demo-placeholder">tags placeholder</div>
+                <div class="demo-placeholder">
+                    tags placeholder
+                </div>
                 <!-- see commented implementation on CFPB Open Tech-->
             </footer>
         </article>
@@ -110,14 +147,8 @@
     margin: 0 0 unit(30px / @base-font-size-px, em);
 }
 
-.post-summary {
-    &_header {
-        .header-slug();
-    }
-
-    &_text {
-        .h3();
-    }
+.post_summary {
+    .h3();
 }
 
 .post_body {
