--- a/static/css/main.less
+++ b/static/css/main.less
@@ -36,8 +36,9 @@ img {
 
 @import (less) "utilities.less";
 @import (less) "vars.less";
-@import (less) "meta.less";
 @import (less) "media-object.less";
+@import (less) "meta.less";
+@import (less) "misc.less";
 @import (less) "post.less";
 @import (less) "summary.less";
 @import (less) "content-blocks.less";
